Copy UCS 3.2-1 to UCS 3.2-2 (Bug #33809)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@49885 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-202-ucsschool-multiserver-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-202-ucsschool-multiserver-s3.cfg
@@ -19,7 +19,7 @@ ec2_keypair_file: ~/ec2/keys/tech.pem
 # Default intance type 
 #	t1.micro m1.small m1.large m1.xlarge c1.medium
 #	c1.xlarge 	m2.xlarge m2.2xlarge m2.4xlarge cc1.4xlarge
-ec2_instance_type: m1.medium
+ec2_instance_type: m3.medium
 
 # Use the tech VPC
 ec2_subnet_id: subnet-f452539c
@@ -55,7 +55,7 @@ command4:
  . utils.sh; install_apps ucsschool
  . utils.sh; run_join_scripts
 command5:
- /root/schoolinstaller.py -uAdministrator -p univention -M
+ /root/schoolinstaller.py -uAdministrator -p univention -M && touch UCSSCHOOL_READY4TESTS
 command6:
  #
 command7:
@@ -93,7 +93,7 @@ command4:
  . utils.sh; install_apps ucsschool
 command5:
  echo -n "univention" >/tmp/univention
- /root/schoolinstaller.py -uAdministrator -p univention -o School1 -M -s 3
+ /root/schoolinstaller.py -uAdministrator -p univention -o School1 -M -s 3 && touch UCSSCHOOL_READY4TESTS
 command6:
  # None
 command7:
@@ -130,18 +130,14 @@ command4:
  . utils.sh; install_apps ucsschool
 command5:
  echo -n "univention" >/tmp/univention
- /root/schoolinstaller.py -uAdministrator -p univention -o School2 -M -s 3
+ /root/schoolinstaller.py -uAdministrator -p univention -o School2 -M -s 3 && touch UCSSCHOOL_READY4TESTS
 command6:
  . utils.sh; install_ucs_test
  . utils.sh; install_apps_test_packages ucsschool
 command7:
  # run tests
- . utils.sh; run_apptests
- LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2022_IP]:ucs-test.log .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2022_IP]:test-reports .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2022_IP]:"/var/log/univention/{join,setup,listener}.log" .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2022_IP]:/var/log/univention/connector* .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave2022_IP]:/var/log/samba/* .
+ . utils.sh; [ -f UCSSCHOOL_READY4TESTS ] && run_apptests
+ LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2022_IP]
 command8:
  halt -p
 files:
