--- a/test/ucs-ec2-tools/examples/jenkins/autotest-201-ucsschool-singleserver-s4-all-components.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-201-ucsschool-singleserver-s4-all-components.cfg
@@ -19,7 +19,7 @@ ec2_keypair_file: ~/ec2/keys/tech.pem
 # Default intance type 
 #	t1.micro m1.small m1.large m1.xlarge c1.medium
 #	c1.xlarge 	m2.xlarge m2.2xlarge m2.4xlarge cc1.4xlarge
-ec2_instance_type: m1.medium
+ec2_instance_type: m3.medium
 
 # Use the tech VPC
 ec2_subnet_id: subnet-f452539c
@@ -55,18 +55,14 @@ command4:
  . utils.sh; install_apps ucsschool
  . utils.sh; run_join_scripts
 command5:
- /root/schoolinstaller.py -uAdministrator -p univention -o School1 -S -s 4
+ /root/schoolinstaller.py -uAdministrator -p univention -o School1 -S -s 4 && touch UCSSCHOOL_READY4TESTS
 command6:
  . utils.sh; install_ucs_test
  . utils.sh; install_apps_test_packages ucsschool
 command7:
  # run tests
- . utils.sh; run_apptests
- LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master201_IP]:ucs-test.log .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master201_IP]:test-reports .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master201_IP]:"/var/log/univention/{join,setup,listener}.log" .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master201_IP]:/var/log/univention/connector* .
- LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master201_IP]:/var/log/samba/* .
+ . utils.sh; [ -f UCSSCHOOL_READY4TESTS ] && run_apptests
+ LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [master201_IP]
 command8:
  halt -p
 files:
