--- a/doc/errata/staging/2014-04-23_univention-directory-listener.yaml
+++ b/doc/errata/staging/2014-04-23_univention-directory-listener.yaml
@@ -6,7 +6,9 @@ fix: 8.0.0-9.220.201405051622
 note:
 version: 1
 desc: |
-  This update changes the Univention Directory Listener to track moved objects
-  by their unique entryUUID. This fixed an issue, when objects in LDAP are
-  modified and moved in short order, or while the listener is not running.
-bug: [34355]
+  This update fixes the following issues in the Univention Directory Listener
+  * adjusted shutdown message
+  * tracking of moved objects by their unique entryUUID. This fixes an issue,
+    when objects in LDAP are modified and moved in short order, or while the
+    listener is not running.
+bug: [32605, 34355]
