--- a/base/univention-pam/debian/rules
+++ b/base/univention-pam/debian/rules
@@ -3,7 +3,7 @@
 # Univention PAM
 #  rules file for the debian package
 #
-# Copyright 2004-2014 Univention GmbH
+# Copyright 2004-2013 Univention GmbH
 #
 # http://www.univention.de/
 #
@@ -35,9 +35,9 @@ override_dh_auto_install:
 	univention-install-config-registry
 	dh_auto_install
 
-override_dh_auto_test:
+override_dh_auto_build:
 	ucslint
-	run-parts -v --regex='^test.*' tests
+	dh_auto_build
 
 %:
 	dh $@
