fix syntax Bug #32605
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49949 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-04-23_univention-directory-listener.yaml
+++ b/doc/errata/staging/2014-04-23_univention-directory-listener.yaml
@@ -4,7 +4,7 @@ scope: ucs_3.2-0-errata3.2-1
 src: univention-directory-listener
 fix: 8.0.0-10.221.201405061116
 note:
-version: 1
+version: [1]
 desc: |
   This update fixes the following issues in the Univention Directory Listener
   * The shutdown message has been adjusted
