fix syntax Bug #33843
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49951 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-04-30_univention-directory-manager-modules.yaml
+++ b/doc/errata/staging/2014-04-30_univention-directory-manager-modules.yaml
@@ -4,7 +4,7 @@ scope: ucs_3.2-0-errata3.2-1
 src: univention-directory-manager-modules
 fix: 9.0.75-31.1194.201404301217
 note:
-version: 1
+version: [1]
 desc: |
   This update fixes a traceback which could occur when creating computer objects
   with a given DHCP or DNS zone, but without IP address.
