Install licenses on autotest 09* systems (Bug #34768)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49973 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-090-master-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-090-master-s3.cfg
@@ -46,6 +46,7 @@ command2:
  . utils.sh; upgrade_to_latest_test_errata
  . utils.sh; run_setup_join
 command3:
+ univention-license-import /root/autotest090.ldif
  . utils.sh; install_ucs_test
  reboot
  LOCAL sleep 60
@@ -58,6 +59,7 @@ command4:
 command5:
  halt -p
 files:
+ ~/ec2/license/autotest090.ldif /root/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
 
