--- a/test/ucs-ec2-tools/examples/jenkins/autotest-091-master-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-091-master-s4.cfg
@@ -46,6 +46,7 @@ command2:
  . utils.sh; upgrade_to_latest_test_errata
  . utils.sh; run_setup_join
 command3:
+ univention-license-import /root/autotest091.ldif
  . utils.sh; install_ucs_test
  reboot
  LOCAL sleep 60
@@ -60,6 +61,7 @@ command4:
 command5:
  halt -p
 files:
+ ~/ec2/license/autotest091.ldif /root/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
 
