--- a/test/ucs-ec2-tools/examples/jenkins/autotest-092-backup-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-092-backup-s3.cfg
@@ -46,7 +46,7 @@ command2:
  . utils.sh; upgrade_to_latest_test_errata
  . utils.sh; run_setup_join
 command3:
- # None
+ univention-license-import /root/autotest092.ldif
 command4:
  reboot
  LOCAL sleep 60 
@@ -56,6 +56,7 @@ command5:
 command6:
  halt -p
 files:
+ ~/ec2/license/autotest092.ldif /root/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
 
