--- a/test/ucs-ec2-tools/examples/jenkins/autotest-095-slave-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-095-slave-s4.cfg
@@ -47,7 +47,7 @@ command2:
  . utils.sh; run_setup_join
  ucr set samba/debug/level=4
 command3:
- # None
+ univention-license-import /root/autotest095.ldif
 command4:
  reboot
  LOCAL sleep 60
@@ -57,6 +57,7 @@ command5:
 command6:
  halt -p
 files:
+ ~/ec2/license/autotest095.ldif /root/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
 
