Bug #34166: create educational server in existing jenkins tests
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@49989 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-207-ucsschool-update-3.1-to-3.2-multiserver-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-207-ucsschool-update-3.1-to-3.2-multiserver-s3.cfg
@@ -92,7 +92,7 @@ command4:
  . utils.sh; switch_to_test_app_center
  . utils.sh; install_apps ucsschool
 command5:
- /root/schoolinstaller.py -uAdministrator -p univention -o School1 -M -s 3 && touch UCSSCHOOL_READY4TESTS
+ /root/schoolinstaller.py -uAdministrator -p univention -o School1 -M -e -s 3 && touch UCSSCHOOL_READY4TESTS
 command6:
  . utils.sh; upgrade_to_testing
  . utils.sh; run_join_scripts
@@ -132,7 +132,7 @@ command4:
  . utils.sh; install_apps ucsschool
 command5:
  echo -n "univention" >/tmp/univention
- /root/schoolinstaller.py -uAdministrator -p univention -o School2 -M -s 3 && touch UCSSCHOOL_READY4TESTS
+ /root/schoolinstaller.py -uAdministrator -p univention -o School2 -M -e -s 3 && touch UCSSCHOOL_READY4TESTS
 command6:
  . utils.sh; upgrade_to_testing
  . utils.sh; run_join_scripts
