--- a/test/ucs-ec2-tools/examples/jenkins/autotest-213-ucsschool-update-3.2-to-3.2-testing-multiserver-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-213-ucsschool-update-3.2-to-3.2-testing-multiserver-s4.cfg
@@ -91,7 +91,7 @@ command3:
 command4:
  . utils.sh; install_apps ucsschool
 command5:
- /root/schoolinstaller.py -uAdministrator -p univention -o School1 -M -s 4 && touch UCSSCHOOL_READY4TESTS
+ /root/schoolinstaller.py -uAdministrator -p univention -o School1 -M -e -s 4 && touch UCSSCHOOL_READY4TESTS
 command6:
  . utils.sh; switch_to_test_app_center
  . utils.sh; install_apps ucsschool
@@ -131,7 +131,7 @@ command4:
  . utils.sh; install_apps ucsschool
 command5:
  echo -n "univention" >/tmp/univention
- /root/schoolinstaller.py -uAdministrator -p univention -o School2 -M -s 4 && touch UCSSCHOOL_READY4TESTS
+ /root/schoolinstaller.py -uAdministrator -p univention -o School2 -M -e -s 4 && touch UCSSCHOOL_READY4TESTS
 command6:
  . utils.sh; switch_to_test_app_center
  . utils.sh; install_apps ucsschool
