--- a/test/ucs-ec2-tools/examples/jenkins/autotest-202-ucsschool-multiserver-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-202-ucsschool-multiserver-s3.cfg
@@ -93,7 +93,7 @@ command4:
  . utils.sh; install_apps ucsschool
 command5:
  echo -n "univention" >/tmp/univention
- /root/schoolinstaller.py -uAdministrator -p univention -o School1 -M -s 3 && touch UCSSCHOOL_READY4TESTS
+ /root/schoolinstaller.py -uAdministrator -p univention -o School1 -M -e -s 3 && touch UCSSCHOOL_READY4TESTS
 command6:
  # None
 command7:
@@ -130,7 +130,7 @@ command4:
  . utils.sh; install_apps ucsschool
 command5:
  echo -n "univention" >/tmp/univention
- /root/schoolinstaller.py -uAdministrator -p univention -o School2 -M -s 3 && touch UCSSCHOOL_READY4TESTS
+ /root/schoolinstaller.py -uAdministrator -p univention -o School2 -M -e -s 3 && touch UCSSCHOOL_READY4TESTS
 command6:
  . utils.sh; install_ucs_test
  . utils.sh; install_apps_test_packages ucsschool
