added UCRV squid/forwardedfor (Bug #34025)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50062 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-squid/conffiles/etc/squid3/squid.conf
+++ b/services/univention-squid/conffiles/etc/squid3/squid.conf
@@ -219,7 +219,7 @@ if redirect:
 	else:
 		print 'url_rewrite_program %s' % redirect
 
-print "forwarded_for %s" configRegistry.get("squid/forwardedfor", "")
+print "forwarded_for %s" % configRegistry.get("squid/forwardedfor", "")
 
 if configRegistry['squid/parent/host']:
 	print 'cache_peer %s parent %d 0 %s' % (configRegistry['squid/parent/host'], int(configRegistry.get('squid/parent/port', 3128)), configRegistry.get('squid/parent/options', 'default'))
