--- a/test/ucs-ec2-tools/examples/jenkins/autotest-203-ucsschool-multiserver-s4-with-administration.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-203-ucsschool-multiserver-s4-with-administration.cfg
@@ -167,7 +167,7 @@ command4:
  . utils.sh; install_apps ucsschool
 command5:
  echo -n "univention" >/tmp/univention
- /root/schoolinstaller.py -uAdministrator -p univention -o School2 -M -a -s 4 && touch UCSSCHOOL_READY4TESTS
+ /root/schoolinstaller.py -uAdministrator -p univention -o School2 -M -a -s 4 -E slave2032 && touch UCSSCHOOL_READY4TESTS
 command6:
  . utils.sh; install_ucs_test
  . utils.sh; install_apps_test_packages ucsschool
