--- a/test/ucs-ec2-tools/examples/jenkins/autotest-203-ucsschool-multiserver-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-203-ucsschool-multiserver-s4.cfg
@@ -2,8 +2,8 @@
 # These settings can be overwritten by the instance
 logfile: autotest-203-ucsschool-multiserver-s4.log
 
-# AMI: Univention Corporate Server (UCS) 3.2 (official image) rev. 2 - ami-37a85a40
-ec2_ami: ami-37a85a40
+# AMI: Univention Corporate Server (UCS) 3.2-2 (official image) rev. 0 - ami-2902c25e
+ec2_ami: ami-2902c25e
 
 # EC2 region
 ec2_region: eu-west-1
