Bug #34182: switched to the current UCS 3.2-2 AMI
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50343 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-203-ucsschool-multiserver-s4-with-administration.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-203-ucsschool-multiserver-s4-with-administration.cfg
@@ -2,8 +2,8 @@
 # These settings can be overwritten by the instance
 logfile: autotest-203-ucsschool-multiserver-s4-with-administration.log
 
-# AMI: Univention Corporate Server (UCS) 3.2-2 (official image) rev. 0 - ami-2902c25e
-ec2_ami: ami-2902c25e
+# AMI: Univention Corporate Server (UCS) 3.2 (official image) rev. 3 - ami-9f30f0e8
+ec2_ami: ami-9f30f0e8
 
 # EC2 region
 ec2_region: eu-west-1
@@ -61,7 +61,7 @@ command6:
 command7:
  #
 command8:
- halt -p
+ LOCAL mkdir RESULT-master203; cd RESULT-master203; ../examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [master203_IP]
 files:
  ~/ec2/license/autotest203.ldif /root/
  examples/jenkins/utils/schoolinstaller.py /root/
@@ -99,7 +99,7 @@ command6:
 command7:
  # None
 command8:
- halt -p
+ LOCAL mkdir RESULT-slave2031; cd RESULT-slave2031; ../examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2031_IP]
 files:
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
@@ -136,7 +136,7 @@ command6:
 command7:
  # None
 command8:
- halt -p
+ LOCAL mkdir RESULT-slave2032; cd RESULT-slave2032; ../examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2032_IP]
 files:
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
@@ -175,8 +175,9 @@ command7:
  # run tests
  . utils.sh; [ -f UCSSCHOOL_READY4TESTS ] && run_apptests
  LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2033_IP]
+ LOCAL mkdir RESULT-slave2033; cd RESULT-slave2033; ../examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2033_IP]
 command8:
- halt -p
+ #halt -p
 files:
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
