--- a/test/ucs-ec2-tools/examples/jenkins/autotest-201-ucsschool-singleserver-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-201-ucsschool-singleserver-s4.cfg
@@ -2,8 +2,8 @@
 # These settings can be overwritten by the instance
 logfile: autotest-201-ucsschool-singleserver-s4.log
 
-# AMI: Univention Corporate Server (UCS) 3.2-2 (official image) rev. 0 - ami-2902c25e
-ec2_ami: ami-2902c25e
+# AMI: Univention Corporate Server (UCS) 3.2 (official image) rev. 3 - ami-9f30f0e8
+ec2_ami: ami-9f30f0e8
 
 # EC2 region
 ec2_region: eu-west-1
