--- a/test/ucs-ec2-tools/examples/jenkins/autotest-203-ucsschool-multiserver-s4-with-administration.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-203-ucsschool-multiserver-s4-with-administration.cfg
@@ -61,7 +61,7 @@ command6:
 command7:
  #
 command8:
- LOCAL mkdir RESULT-master203; cd RESULT-master203; ../examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [master203_IP]
+ halt -p
 files:
  ~/ec2/license/autotest203.ldif /root/
  examples/jenkins/utils/schoolinstaller.py /root/
@@ -99,7 +99,7 @@ command6:
 command7:
  # None
 command8:
- LOCAL mkdir RESULT-slave2031; cd RESULT-slave2031; ../examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2031_IP]
+ halt -p
 files:
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
@@ -136,7 +136,7 @@ command6:
 command7:
  # None
 command8:
- LOCAL mkdir RESULT-slave2032; cd RESULT-slave2032; ../examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2032_IP]
+ halt -p
 files:
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
@@ -175,9 +175,8 @@ command7:
  # run tests
  . utils.sh; [ -f UCSSCHOOL_READY4TESTS ] && run_apptests
  LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2033_IP]
- LOCAL mkdir RESULT-slave2033; cd RESULT-slave2033; ../examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2033_IP]
 command8:
- #halt -p
+ halt -p
 files:
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
