Bug #34166: collect logfiles from all systems
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50355 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-203-ucsschool-multiserver-s4-with-administration.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-203-ucsschool-multiserver-s4-with-administration.cfg
@@ -61,6 +61,7 @@ command6:
 command7:
  #
 command8:
+ LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [master203_IP] log-master203
  halt -p
 files:
  ~/ec2/license/autotest203.ldif /root/
@@ -99,6 +100,7 @@ command6:
 command7:
  # None
 command8:
+ LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2031_IP] log-slave2031
  halt -p
 files:
  examples/jenkins/utils/schoolinstaller.py /root/
@@ -136,6 +138,7 @@ command6:
 command7:
  # None
 command8:
+ LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2032_IP] log-slave2032
  halt -p
 files:
  examples/jenkins/utils/schoolinstaller.py /root/
@@ -175,6 +178,7 @@ command7:
  # run tests
  . utils.sh; [ -f UCSSCHOOL_READY4TESTS ] && run_apptests
  LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2033_IP]
+ LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2033_IP] log-slave2033
 command8:
  halt -p
 files:
