Bug #34166: collect logfiles from all systems
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50360 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-204-ucsschool-multiserver-s4-school-only-with-memberserver.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-204-ucsschool-multiserver-s4-school-only-with-memberserver.cfg
@@ -140,6 +140,9 @@ command7:
  # run tests
  . utils.sh; run_apptests
  LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [member2043_IP]
+ LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [master204_IP] log-master204
+ LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2042_IP] log-slave2042
+ LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [member2043_IP] log-member2043
 command8:
  halt -p
 files:
