--- a/test/ucs-ec2-tools/examples/jenkins/autotest-202-ucsschool-multiserver-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-202-ucsschool-multiserver-s3.cfg
@@ -138,9 +138,11 @@ command7:
  # run tests
  . utils.sh; [ -f UCSSCHOOL_READY4TESTS ] && run_apptests
  LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2022_IP]
+ LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [master202_IP] log-master202
+ LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2021_IP] log-slave2021
+ LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2022_IP] log-slave2022
 command8:
  halt -p
 files:
  examples/jenkins/utils/schoolinstaller.py /root/
- examples/jenkins/utils/utils.sh /root/
- ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
+ examples/jenkins/utils/utils.sh /root/ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
