--- a/test/ucs-ec2-tools/examples/jenkins/autotest-203-ucsschool-multiserver-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-203-ucsschool-multiserver-s4.cfg
@@ -61,7 +61,6 @@ command6:
 command7:
  #
 command8:
- LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [master203_IP] log-master203
  halt -p
 files:
  ~/ec2/license/autotest203.ldif /root/
@@ -100,10 +99,9 @@ command6:
 command7:
  # None
 command8:
- LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2031_IP] log-slave2031
  halt -p
 files:
- examples/jenkins/utils/schoolinstaller.py /root/
+. examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
@@ -140,8 +138,10 @@ command7:
  # run tests
  . utils.sh; [ -f UCSSCHOOL_READY4TESTS ] && run_apptests
  LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2032_IP]
+ LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [master203_IP] log-master203
+ LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2031_IP] log-slave2031
  LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2032_IP] log-slave2032
-command8:
+gcommand8:
  halt -p
 files:
  examples/jenkins/utils/schoolinstaller.py /root/
