--- a/test/ucs-ec2-tools/examples/jenkins/autotest-204-ucsschool-multiserver-s4-school-only.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-204-ucsschool-multiserver-s4-school-only.cfg
@@ -138,6 +138,9 @@ command7:
  # run tests
  . utils.sh; [ -f UCSSCHOOL_READY4TESTS ] && run_apptests
  LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2042_IP]
+ LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [master204_IP] log-master204
+ LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2041_IP] log-slave2041
+ LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2042_IP] log-slave2042
 command8:
  halt -p
 files:
