Bug #34166: fixed stupid typos
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50362 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-203-ucsschool-multiserver-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-203-ucsschool-multiserver-s4.cfg
@@ -101,7 +101,7 @@ command7:
 command8:
  halt -p
 files:
-. examples/jenkins/utils/schoolinstaller.py /root/
+ examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
@@ -141,7 +141,7 @@ command7:
  LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [master203_IP] log-master203
  LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2031_IP] log-slave2031
  LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2032_IP] log-slave2032
-gcommand8:
+command8:
  halt -p
 files:
  examples/jenkins/utils/schoolinstaller.py /root/
