Fixed another typo (Bug #34166)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50363 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-202-ucsschool-multiserver-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-202-ucsschool-multiserver-s3.cfg
@@ -145,5 +145,5 @@ command8:
  halt -p
 files:
  examples/jenkins/utils/schoolinstaller.py /root/
- examples/jenkins/utils/utils.sh 
-/root/ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
+ examples/jenkins/utils/utils.sh /root/
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
