--- a/test/ucs-test/debian/control
+++ b/test/ucs-test/debian/control
@@ -421,6 +421,16 @@ Provides: ucs-test-module
 Description: Test scripts to test the UMC system modules
  This package includes test-cases for the UMC system modules.
 
+Package: ucs-test-nfs
+Architecture: all
+Recommends: ucs-test-framework
+Depends: ucs-test-libs (= ${source:Version}),
+ nfs-common,
+ ${misc:Depends}
+Provides: ucs-test-module
+Description: Test scripts to test the NFS
+ This package includes test-cases for the Network File System.
+
 Package: ucs-test-modules-all
 Architecture: all
 Depends:
@@ -456,6 +466,7 @@ Depends:
  ucs-test-adconnector,
  ucs-test-appcenter,
  ucs-test-umc-system,
+ ucs-test-nfs,
 # ucs-test-ucsschool,
 # ucs-test-login
 Description: UCS test environment meta package
