Use slave as nameserver (Bug #33677)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50393 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-204-ucsschool-multiserver-s4-school-only-with-memberserver.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-204-ucsschool-multiserver-s4-school-only-with-memberserver.cfg
@@ -116,7 +116,7 @@ profile:
  locale/default="de_DE.UTF-8:UTF-8"
  packages_install="univention-samba"
  packages_remove=""
- nameserver=[master204_IP]
+ nameserver=[slave2042_IP]
 command1:
  . utils.sh; basic_setup
 command2:
