Bug #34166: collect logfiles from all systems / fixed logfile names
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50425 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-211-ucsschool-update-3.2-to-3.2-testing-singleserver-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-211-ucsschool-update-3.2-to-3.2-testing-singleserver-s4.cfg
@@ -1,6 +1,6 @@
 [Global]
 # These settings can be overwritten by the instance
-logfile: autotest-211-ucsschool-singleserver-s4.log
+logfile: autotest-211-ucsschool-update-3.2-to-3.2-testing-singleserver-s4.log
 
 # AMI: Univention Corporate Server (UCS) 3.2 (official image) rev. 1 - ami-00ac4477
 ec2_ami: ami-00ac4477
