--- a/test/ucs-ec2-tools/examples/jenkins/autotest-213-ucsschool-update-3.2-to-3.2-testing-multiserver-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-213-ucsschool-update-3.2-to-3.2-testing-multiserver-s4.cfg
@@ -1,6 +1,6 @@
 [Global]
 # These settings can be overwritten by the instance
-logfile: autotest-213-ucsschool-multiserver-s4.log
+logfile: autotest-213-ucsschool-update-3.2-to-3.2-testing-multiserver-s4.log
 
 # AMI: Univention Corporate Server (UCS) 3.2 (official image) rev. 1 - ami-00ac4477
 ec2_ami: ami-00ac4477
@@ -146,6 +146,9 @@ command8:
  # run tests
  . utils.sh; [ -f UCSSCHOOL_READY4TESTS ] && run_apptests
  LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2132_IP]
+ LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [master213_IP] log-master213
+ LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2131_IP] log-slave2131
+ LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2132_IP] log-slave2132
 command9:
  halt -p
 files:
