--- a/test/ucs-ec2-tools/examples/jenkins/autotest-214-ucsschool-update-3.2-to-3.2-testing-multiserver-s4-school-only.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-214-ucsschool-update-3.2-to-3.2-testing-multiserver-s4-school-only.cfg
@@ -1,6 +1,6 @@
 [Global]
 # These settings can be overwritten by the instance
-logfile: autotest-214-ucsschool-multiserver-s4.log
+logfile: autotest-214-ucsschool-update-3.2-to-3.2-testing-multiserver-s4-school-only.log
 
 # AMI: Univention Corporate Server (UCS) 3.2 (official image) rev. 1 - ami-00ac4477
 ec2_ami: ami-00ac4477
@@ -146,6 +146,9 @@ command8:
  # run tests
  . utils.sh; [ -f UCSSCHOOL_READY4TESTS ] && run_apptests
  LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2142_IP]
+ LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [master214_IP] log-master214
+ LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2141_IP] log-slave2141
+ LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2142_IP] log-slave2142
 command9:
  halt -p
 files:
