--- a/test/ucs-ec2-tools/examples/jenkins/autotest-210-ucsschool-update-3.2-to-3.2-testing-singleserver-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-210-ucsschool-update-3.2-to-3.2-testing-singleserver-s3.cfg
@@ -1,6 +1,6 @@
 [Global]
 # These settings can be overwritten by the instance
-logfile: autotest-210-ucsschool-singleserver-s3.log
+logfile: autotest-210-ucsschool-update-3.2-to-3.2-testing-singleserver-s3.log
 
 # AMI: Univention Corporate Server (UCS) 3.2 (official image) rev. 1 - ami-00ac4477
 ec2_ami: ami-00ac4477
