--- a/test/ucs-ec2-tools/examples/jenkins/autotest-212-ucsschool-update-3.2-to-3.2-testing-multiserver-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-212-ucsschool-update-3.2-to-3.2-testing-multiserver-s3.cfg
@@ -1,6 +1,6 @@
 [Global]
 # These settings can be overwritten by the instance
-logfile: autotest-212-ucsschool-multiserver-s4.log
+logfile: autotest-212-ucsschool-update-3.2-to-3.2-testing-multiserver-s3.log
 
 # AMI: Univention Corporate Server (UCS) 3.2 (official image) rev. 1 - ami-00ac4477
 ec2_ami: ami-00ac4477
@@ -146,6 +146,9 @@ command8:
  # run tests
  . utils.sh; [ -f UCSSCHOOL_READY4TESTS ] && run_apptests
  LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2122_IP]
+ LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [master212_IP] log-master212
+ LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2121_IP] log-slave2121
+ LOCAL examples/jenkins/utils/utils-local.sh ucsschool-fetch-results [slave2122_IP] log-slave2122
 command9:
  halt -p
 files:
