Use create_ou to add the dc to the groups (Bug #32187)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50478 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-204-ucsschool-multiserver-s4-school-only-with-slave.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-204-ucsschool-multiserver-s4-school-only-with-slave.cfg
@@ -57,7 +57,8 @@ command4:
 command5:
  /root/schoolinstaller.py -uAdministrator -p univention -M && touch UCSSCHOOL_READY4TESTS
 command6:
- #
+ /usr/share/ucs-school-import/scripts/create_ou School2 slave2043
+ /usr/share/ucs-school-import/scripts/move_domaincontroller_to_ou --dcname slave2043 --ou School2
 command7:
  #
 command8:
@@ -96,9 +97,6 @@ command5:
  /root/schoolinstaller.py -uAdministrator -p univention -o School1 -M -e -s 4 && touch UCSSCHOOL_READY4TESTS
 command6:
  # None
- udm groups/group modify --dn "cn=OUschool2-DC-Edukativnetz,cn=ucsschool,cn=groups,dc=autotest204,dc=local" --append hosts="cn=slave2043,cn=dc,cn=computers,dc=autotest204,dc=local"
- udm groups/group modify --dn "cn=DC-Edukativnetz,cn=ucsschool,cn=groups,dc=autotest204,dc=local" --append hosts="cn=slave2043,cn=dc,cn=computers,dc=autotest204,dc=local"
- /usr/share/ucs-school-import/scripts/move_domaincontroller_to_ou --dcname slave2043 --ou School2
 command7:
  # None
 command8:
