Bug #34896 errata: reformat maximum column width
Limit to 80 columns since the text is used in a HTML-<pre>-environment.

Fix some spelling mistakes:
- JavaScript
- FreeRADIUS
- independ[a->e]nt
- applicat[ed->ion]

Add missing dot at end of sentence.

The 'note' is rendered between the description and the list of bug/CVE
Ids. As such move the line between 'desc' and 'bug'/'cve' to reflect
this, as it's otherwise unclear how the note should be phrased.
Remove all other empty notes.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@50500 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/published/2013-11-21-univention-management-console-module-appcenter.yaml
+++ b/doc/errata/published/2013-11-21-univention-management-console-module-appcenter.yaml
@@ -3,16 +3,15 @@ release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: univention-management-console-module-appcenter
 fix: 3.0.50-16.229.201312021426
-note:
 version: [0]
 desc: |
   This errata update fixes several issues:
-  * Added a function to query applications based on their component_id
+  * Added a function to query applications based on their component_id.
   * Fixed sending notifications to Univention although the app did not require
-    it
+    it.
   * When updating from UCS 3.1, apps from UCS 3.1 were registered by mistake.
-    Fixed that
-  * The joinscript now fails when registering the apps did not succeed
+    Fixed that.
+  * The joinscript now fails when registering the apps did not succeed.
   * Show an error message when application registration fails after
-    installation. Register applications upon each opening of the module
+    installation. Register applications upon each opening of the module.
 bug: [33484, 33362, 33535, 33341, 33573]
