--- a/doc/errata/published/2014-02-07-univention-system-setup.yaml
+++ b/doc/errata/published/2014-02-07-univention-system-setup.yaml
@@ -3,8 +3,8 @@ release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: univention-system-setup
 fix: 7.0.69-7.568.201402071339
-note:
 version: [0]
 desc: |
-  This update hides the tab bar of Mozilla Firefox in appliance mode to enhance the user experience.
+  This update hides the tab bar of Mozilla Firefox in appliance mode to enhance
+  the user experience.
 bug: [33640]
