--- a/doc/errata/published/2013-12-12-univention-management-console-frontend.yaml
+++ b/doc/errata/published/2013-12-12-univention-management-console-frontend.yaml
@@ -3,13 +3,12 @@ release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: univention-management-console-frontend
 fix: 3.0.152-17.814.201401281546
-note:
 version: [0]
 desc: |
  This update fixes several issues:
  * The protocol of a printer URI in the printers UMC module was always set to
    "cups-pdf://".
- * Improved branding support in UMC widgets
+ * Improved branding support in UMC widgets.
  * Reversed the traceback when sending errors via mail since the web or mail
    client could truncate important information.
  * Fixed MultiSelect widget setting its values too early which could break page
