--- a/doc/errata/published/2013-12-19-univention-ldap.yaml
+++ b/doc/errata/published/2013-12-19-univention-ldap.yaml
@@ -3,7 +3,6 @@ release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: univention-ldap
 fix: 10.0.17-23.670.201401221613
-note:
 version: [0]
 desc: |
   This errata update fixes several issues:
@@ -14,9 +13,9 @@ desc: |
   * The LDAP ACLs now support the configuration of a
     custom Administrator name via the new UCR variable family
     "users/default/.*". These variables are managed automatically by
-    a Univention Directory Listener module (introduced via erratum 30 for UCS 3.2) 
-    and should usually not be adjusted manually.
-  * New schema extension for MS WMI filters
+    a Univention Directory Listener module (introduced via erratum 30 for
+    UCS 3.2) and should usually not be adjusted manually.
+  * New schema extension for MS WMI filters.
   * The local schema inclusion code now detects extensions included by
-    template subfiles
+    template subfiles.
 bug: [33430, 33704, 33890, 33961, 33962]
