--- a/doc/errata/published/2014-01-21-univention-management-console-module-appcenter.yaml
+++ b/doc/errata/published/2014-01-21-univention-management-console-module-appcenter.yaml
@@ -3,10 +3,10 @@ release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: univention-management-console-module-appcenter
 fix: 3.0.50-17.230.201401211203
-note:
 version: [0]
 desc: |
   This update fixes several issues:
-  * Applications can now provide information on the organisation providing support for the app
-  * Renamed "Website" to "More information"
+  * Applications can now provide information on the organisation providing
+    support for the app.
+  * Renamed "Website" to "More information".
 bug: [33958, 31344]
