--- a/doc/errata/published/2014-01-28-univention-kernel-image.yaml
+++ b/doc/errata/published/2014-01-28-univention-kernel-image.yaml
@@ -3,18 +3,15 @@ release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: univention-kernel-image
 fix: 7.0.0-9.48.201401271412
-note: |
- This is the second part of the fix, which updates the kernel meta packages to
- automatically install the new kernel package provided by the previous errata
- update.
 version: [0]
 desc: |
- The Linux kernel package has been updated to 3.10.26. This provides a wide range of
- bugfixes and fixes the following security vulnerabilities:
+ The Linux kernel package has been updated to 3.10.26. This provides a wide
+ range of bugfixes and fixes the following security vulnerabilities:
  * Information leak in cpqarray and cciss drivers (CVE-2013-2147)
  * Use-after-free in TUN network driver (CVE-2013-4343)
  * Off-by-one in ansi cprng (CVE-2013-4345)
- * If SCTP is transferred over Ipv6 in some configurations IPsec doesn't work correctly (CVE-2013-4350)
+ * If SCTP is transferred over Ipv6 in some configurations IPsec doesn't work
+   correctly (CVE-2013-4350)
  * Denial of service in device mapper (CVE-2013-4299)
  * Denial of service in IPv6 (CVE-2013-4387)
  * Denial of service in skb_flow_dissect() (CVE-2013-4348)
@@ -35,8 +32,10 @@ desc: |
  * NULL pointer dereference in ipv6 (CVE-2013-6431)
  * Buffer overflow in radiotap wireless driver (CVE-2013-7027)
  * Race conditions in IPC handling (CVE-2013-7026)
- * Various memory leaks in socket handling (CVE-2013-7263, CVE-2013-7264, CVE-2013-7265, CVE-2013-7281)
- * Various memory leaks in socket handling (CVE-2013-7266, CVE-2013-7267, CVE-2013-7268, CVE-2013-7269, CVE-2013-7270, CVE-2013-7271)
+ * Various memory leaks in socket handling (CVE-2013-7263, CVE-2013-7264,
+   CVE-2013-7265, CVE-2013-7281)
+ * Various memory leaks in socket handling (CVE-2013-7266, CVE-2013-7267,
+   CVE-2013-7268, CVE-2013-7269, CVE-2013-7270, CVE-2013-7271)
  * Information leak in farsync network ioctl (CVE-2014-1444)
  * Information leak in wanxl network ioctl (CVE-2014-1445)
 
@@ -44,6 +43,10 @@ desc: |
  UCS 3.2 caused the header files to move from /usr/include/asm/ to the
  different location /ucr/include/gnu-*-linux/asm/, which broke compiling other
  software. This change was reverted.
+note: |
+ This is the second part of the fix, which updates the kernel meta packages to
+ automatically install the new kernel package provided by the previous errata
+ update.
 cve:
  - CVE-2013-2147
  - CVE-2013-4343
