--- a/doc/errata/published/2014-01-31-univention-management-console-frontend.yaml
+++ b/doc/errata/published/2014-01-31-univention-management-console-frontend.yaml
@@ -3,11 +3,10 @@ release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: univention-management-console-frontend
 fix: 3.0.152-21.819.201402041443
-note:
 version: [0]
 desc: |
  This update fixes several issues:
  * Fixed styling errors in the host dropdown menu related to different
-   rendering in browsers
- * Support UMC modules that may be opened only once at the same time
+   rendering in browsers.
+ * Support UMC modules that may be opened only once at the same time.
 bug: [32655,31855]
