Bug #34896 errata: reformat maximum column width
Limit to 80 columns since the text is used in a HTML-<pre>-environment.

Fix some spelling mistakes:
- JavaScript
- FreeRADIUS
- independ[a->e]nt
- applicat[ed->ion]

Add missing dot at end of sentence.

The 'note' is rendered between the description and the list of bug/CVE
Ids. As such move the line between 'desc' and 'bug'/'cve' to reflect
this, as it's otherwise unclear how the note should be phrased.
Remove all other empty notes.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@50500 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/published/2014-03-07-univention-management-console-frontend.yaml
+++ b/doc/errata/published/2014-03-07-univention-management-console-frontend.yaml
@@ -3,12 +3,11 @@ release: "3.2"
 scope: ucs_3.2-0-errata3.2-1
 src: univention-management-console-frontend
 fix: 3.0.152-25.823.201404031315
-note:
 version: [1]
 desc: |
   This update fixes the following issues:
   * Add a method to the UMC web server to retrieve the client's IP address.
   * The UMC web server uses Apache as a proxy server. The timeout for proxy
-    requests is now configured by the UCR variable umc/http/session/timeout
+    requests is now configured by the UCR variable umc/http/session/timeout.
   * The detection of Internet Explorer 11 has been fixed.
 bug: [34288, 34005, 33990]
