--- a/doc/errata/published/2014-02-24-univention-management-console-module-appcenter.yaml
+++ b/doc/errata/published/2014-02-24-univention-management-console-module-appcenter.yaml
@@ -3,11 +3,10 @@ release: "3.2"
 scope: ucs_3.2-0-errata3.2-1
 src: univention-management-console-module-appcenter
 fix: 3.0.51-4.238.201402261011
-note:
 version: [1]
 desc: |
   This errata update fixes several issues:
   * Renamed the button for buying an app from "Shop" to "Buy".
   * Whitelisting and blacklisting now works with the applications' ID and on
-    unlocalised data
+    unlocalised data.
 bug: [34183,34145]
