--- a/doc/errata/published/2014-03-13-univention-virtual-machine-manager-daemon.yaml
+++ b/doc/errata/published/2014-03-13-univention-virtual-machine-manager-daemon.yaml
@@ -3,10 +3,9 @@ release: "3.2"
 scope: ucs_3.2-0-errata3.2-1
 src: univention-virtual-machine-manager-daemon
 fix: 3.0.17-6.489.201403131114
-note:
 version: [1]
 desc: |
   This update fixes the following issue:
   * Use force-stop and force-restart in the initscript of Univention
-    Virtual Machine Manager to handle blocked UVMMd processes
+    Virtual Machine Manager to handle blocked UVMMd processes.
 bug: [34321]
