--- a/doc/errata/published/2014-04-14-libyaml.yaml
+++ b/doc/errata/published/2014-04-14-libyaml.yaml
@@ -5,8 +5,8 @@ scope: ucs_3.2-0-errata3.2-1
 src: libyaml
 fix: 0.1.3-1.12.201404141245
 desc: |
- A buffer overflow in libyaml was found which allowed the execution of arbitrary code 
- if a malformed YAML file is processed.
+ A buffer overflow in libyaml was found which allowed the execution of arbitrary
+ code if a malformed YAML file is processed.
 note: This update fixes this vulnerability.
 cve:
  - CVE-2014-2525
