--- a/doc/errata/published/2014-04-23_univention-directory-listener.yaml
+++ b/doc/errata/published/2014-04-23_univention-directory-listener.yaml
@@ -3,12 +3,11 @@ release: "3.2"
 scope: ucs_3.2-0-errata3.2-1
 src: univention-directory-listener
 fix: 8.0.0-10.221.201405061116
-note:
 version: [1]
 desc: |
   This update fixes the following issues in the Univention Directory Listener
-  * The shutdown message has been adjusted
-  * Moved objects are now tracked by their unique entryUUID. This fixes an issue,
-    when objects in LDAP are modified and moved in short order, or while the
-    listener is not running.
+  * The shutdown message has been adjusted.
+  * Moved objects are now tracked by their unique 'entryUUID'. This fixes an
+    issue, when objects in LDAP are modified and moved in short order, or while
+    the listener is not running.
 bug: [32605, 34355]
