--- a/doc/errata/published/2014-05-07-freeradius.yaml
+++ b/doc/errata/published/2014-05-07-freeradius.yaml
@@ -3,8 +3,8 @@ release: "3.2"
 scope: ucs_3.2-0-errata3.2-1
 src: freeradius
 fix: 2.1.10+dfsg-2.79.201404221745
-note:
 version: [0, 1]
 desc: |
-  The service start of Freeradius can now be managed through the freeradius/autostart UCR setting.
+  The service start of FreeRADIUS can now be managed through the
+  freeradius/autostart UCR setting.
 bug: [29465]
