Bug #34835 Listener: Check real same_rdn()
Test the real implementation and not some (deprecated) copy.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@50550 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-listener/tests/Makefile
+++ b/management/univention-directory-listener/tests/Makefile
@@ -29,19 +29,20 @@
 # /usr/share/common-licenses/AGPL-3; if not, see
 # <http://www.gnu.org/licenses/>.
 #
-TESTS += test__filter__cache_entry_ldap_filter_match
-TESTS += test__change__same_rdn
+SOURCES := $(wildcard test__*.c)
+TESTS := $(patsubst  %.c,%,$(SOURCES))
 
 .PHONY: tests
 tests: $(TESTS)
-	set -e ; for t in $^; do ./$$t ; done
+	run-parts --verbose --regex='test__[^.]*$$' .
 
-test__filter__cache_entry_ldap_filter_match: test__filter__cache_entry_ldap_filter_match.o ../src/filter.o
-test__change__same_rdn: test__change__same_rdn.o -lldap
+test__filter__cache_entry_ldap_filter_match: ../src/filter.o
 
 include ../src/Makefile
 
 CFLAGS := -g -Wall -Werror -D_FILE_OFFSET_BITS=64 $(DB_CFLAGS) -I../src
+LDFLAGS := -Wl,--unresolved-symbols=ignore-all -Wl,--as-needed
+LDLIBS := -lldap
 
 .PHONY: clean
 clean:
