--- a/test/ucs-ec2-tools/examples/jenkins/autotest-200-ucsschool-singleserver-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-200-ucsschool-singleserver-s3.cfg
@@ -59,6 +59,7 @@ command5:
 command6:
  . utils.sh; install_ucs_test
  . utils.sh; install_apps_test_packages ucsschool
+ univention-install -y --force-yes ucs-school-roleshares
 command7:
  # run tests
  . utils.sh; [ -f UCSSCHOOL_READY4TESTS ] && run_apptests
